Bug 229285 - separate nsIXULOverlayProvider from nsIXULChromeRegistry r=bryner sr=hyatt